- Added a difficulty selector for bots.
- Added a keybind to quickly switch into spectator mode.
	- Default bind: v
- Added a proper download directory.

Bug Fixes:
- Fixed a bug where the Railgun doesn't display effects when hitting a player.
- Fixed an issue where you couldn't pick up the Gatling Gun.
- Fixed a bug where the Railgun doesn't unzoom when switching weapons.

Balance Tweaks:
- Limited how much ammo you can carry:
	- You can only carry up to 5 Combine Balls at once for the CBL-V2.
	- You can only carry up to 225 rounds at once for the Pistol.
	- You can only carry up to 225 rounds at once for the SMG.
	- You can only carry up to 500 rounds at once for the Gatling Gun.
	- You can only carry up to 48 rounds at once for the .357 Magnum.
	- You can only carry up to 25 bolts at once for the Crossbow.
	- You can only carry up to 45 rounds at once for the Shotgun.
	- You can only carry up to 5 rockets at once for the RPG.
	- You can only carry up to 5 grenades at once for the SMG.
	- You can only carry up to 5 frag grenades at once.
	- You can only carry up to 5 S.L.A.M. tripmines at once.
	- You can only carry up to 3 batteries at once for the Railgun. (300% charge)
- Nerfed the Railgun damage from 50 to 25.
- The Railgun now does the following when in an overcharged state:
	- The Railgun uses more battery when overcharged. (50% compared to 25%)
	- The Railgun will deal double the amount of damage when overcharged (from 25 to 50).
	- After overcharging, the railgun will have a slower recharge time.

Misc. Changes:
- The default config will now properly set Pantone Shift as the default pony.
- Enabled the Flashlight by default in the server settings.
- The Railgun's beam will now decrease in brightness after 50% battery.
- Impulse 101 will now properly fill up the player's inventory to the max.
- Bots will now use more types of weapons.
	- Bots will now detonate the SLAM on command and will enable guiding on their RPGs on the medium and hard difficulties.